[package]
name = "reading-list-to-pinboard"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.39"
dialoguer = "0.11.0"
dotenvy = "0.15.7"
futures = "0.3.30"
pin = "0.2.8"
plist = "1.7.0"
raindrop = "0.3.5"
reqwest = { version = "0.12.5", features = ["json", "multipart"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.137"
shellexpand = "3.1.0"
tokio = { version = "1.38.0", features = ["rt-multi-thread"] }
